[package]
name = "bevy_dragndrop"
version = "0.1.0"
authors = ["Cadyn Bombaci"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
bevy = {version = "0.12.0", default-features = true, features = ["dynamic_linking"]}
rand = "0.8.5"

[dependencies]
bevy = {version = "0.12.0", default-features = false, features = ["bevy_asset","bevy_render"]}
bitflags = "2.4.1"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
