[package]
name = "bevy_dragndrop"
description = "A simple crate to make implementing drag and drop functionality much easier for the bevy ECS engine."
version = "0.3.0"
authors = ["Cadyn Bombaci"]
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "readme.md"
repository = "https://github.com/cadyn/bevy_dragndrop"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
bevy = {version = "0.14", default-features = true, features = ["dynamic_linking"]}
rand = "0.8"

[dependencies]
bevy = {version = "0.14", default-features = false, features = ["bevy_asset","bevy_render","bevy_ui"]}
bitflags = "2.6"


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
